force-app/main/default/objects/OpportunityLineItem/fields/Bultos__c.field-meta.xml
<CustomField>
    <fullName>Bultos__c</fullName>
    <label>Bultos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>