force-app/main/default/objects/OpportunityLineItem/fields/Cantidad_por_palet__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_por_palet__c</fullName>
    <formula>PricebookEntry.Product2.ERUM_Cantidad_por_palet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad por palet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>