force-app/main/default/objects/OpportunityLineItem/fields/ERUM_Cantidad_entregada__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cantidad_entregada__c</fullName>
    <label>Cantidad enviada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>