force-app/main/default/objects/OpportunityLineItem/fields/Erum_Key_Linea__c.field-meta.xml
<CustomField>
    <fullName>Erum_Key_Linea__c</fullName>
    <label>Clave Línea Erum</label>
    <length>74</length>
    <type>Text</type>
</CustomField>