force-app/main/default/objects/OpportunityLineItem/fields/ERUM_Line_No__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Line_No__c</fullName>
    <label>Número Línea Erum</label>
    <length>74</length>
    <type>Text</type>
</CustomField>