force-app/main/default/objects/OpportunityLineItem/fields/ERUM_UM__c.field-meta.xml
<CustomField>
    <fullName>ERUM_UM__c</fullName>
    <label>Unidad medida venta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>