force-app/main/default/objects/OpportunityLineItem/fields/Grupo_contable_negocio__c.field-meta.xml
<CustomField>
    <fullName>Grupo_contable_negocio__c</fullName>
    <label>Grupo contable negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_contable_negocio</valueSetName>
    </valueSet>
</CustomField>