force-app/main/default/objects/OpportunityLineItem/fields/Grupo_contable_producto__c.field-meta.xml
<CustomField>
    <fullName>Grupo_contable_producto__c</fullName>
    <label>Grupo contable producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_contable_producto</valueSetName>
    </valueSet>
</CustomField>