force-app/main/default/objects/OpportunityLineItem/fields/Importe_con_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_con_IVA__c</fullName>
    <formula>Subtotal__c +( Subtotal__c* ERUM_Impuesto__c )+( Subtotal__c* Discount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>