force-app/main/default/objects/OpportunityLineItem/fields/Importe_D_linea__c.field-meta.xml
<CustomField>
    <fullName>Importe_D_linea__c</fullName>
    <formula>Subtotal__c  -  TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe D linea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>