force-app/main/default/objects/OpportunityLineItem/fields/Peso_neto_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_neto_Kg__c</fullName>
    <label>Peso neto (Kg)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>