force-app/main/default/objects/OpportunityLineItem/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <formula>Opportunity.Pricebook2.ERUM_PB_Id_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa</label>
    <type>Text</type>
</CustomField>