force-app/main/default/objects/OpportunityLineItem/validationRules/Cantidad_multiplo_unidadmedida.validationRule-meta.xml
<ValidationRule>
    <fullName>Cantidad_multiplo_unidadmedida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(MOD( Quantity, Product2.ERUM_Unidad_embalaje__c  ) &lt;&gt; 0, ISPICKVAL( QuieresRedondearCantidad__c , &apos;&apos;) )</errorConditionFormula>
    <errorMessage>No es múltiplo de unidad de embalaje, selecciona si quieres redondear la cantidad.</errorMessage>
</ValidationRule>